templates/postgrest-deployment.template.yml
# kubetpl:syntax:$
# kubetpl:set:POSTGRES_DB=cvmData
# kubetpl:set:POSTGRES_READONLY_USERNAME=readonly
# kubetpl:set:POSTGRES_READONLY_PASSWORD=pJvykeLXdhCDFs99
# kubetpl:set:CACHE_CONFIG=nginx.dev.conf
# kubetpl:set:POSTGREST_PROXY=http://api.meajudafi.com.br/

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: meajudafi
  name: postgrest-deployment
  labels:
    app: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
      - name: postgrest-pod
        image: postgrest/postgrest:latest
        ports:
        - containerPort: 3000
      - name: cache-pod
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: $CACHE_CONFIG
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
