templates/postgres-service.template.yml
# kubetpl:syntax:$

apiVersion: v1
kind: Service
metadata:
  namespace: meajudafi
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432        
  clusterIP: None
  selector:
    app: postgres
