templates/postgrest-service.template.yml
# kubetpl:syntax:$

apiVersion: v1
kind: Service
metadata:
  namespace: meajudafi
  name: postgrest-service
  labels:
    app: postgrest
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http 
  selector:
    app: postgrest
  type: LoadBalancer
