templates/cors-anywhere-ingress.template.yml
# kubetpl:syntax:$

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: meajudafi
  name: cors-anywhere-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$$2
spec:
  rules:
  - host: api.meajudafi.com.br
    http:
      paths:
      - path: /proxy(/|$$)(.*)
        backend:
          serviceName: cors-anywhere-service
          servicePort: 80
