templates/postgrest-ingress.template.yml
# kubetpl:syntax:$

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: meajudafi
  name: postgrest-ingress  
spec:
  rules:
  - host: api.meajudafi.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: postgrest-service
          servicePort: 80
